[tool.poetry]
name = "tiktokdownloader"
version = "0.1.0"
description = ""
authors = ["jpl444 <jpl44@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
idna = "3.6"
pyaes = "1.6.1"
pyrogram = "2.0.106"
pysocks = "1.7.1"
python-dotenv = "1.0.0"
requests = "2.31.0"
soupsieve = "2.5"
tgcrypto = "1.2.5"
urllib3 = "2.1.0"
douyin-tiktok-scraper = "^1.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
